# local-research-decontaminate

./: .env.example  .gitignore  README.md  base_index.py  contaminate_script.py  contamination_script.py  index.py  pair_ngram_score.py  pyproject.toml  reset_es.py  search.py  upload_dataset.py
data/: gsm8k-train-subset-sample.csv  sample-test-cases-openai-openai_humaneval.csv
elastic-start-local/: README.md  docker-compose.yml  start.sh  uninstall.sh
elastic-start-local/config/: telemetry.yml
